# Flam-assignent

./: .gitignore  ARCHITECTURE.md  README.md
app/: build.gradle.kts
app/app/src/main/cpp/: native_processor.cpp
app/app/src/main/cpp/gl/: gl_texture_uploader.h
app/app/src/main/java/com/example/myapplication/: MainActivity.kt  NativeProcessor.kt
app/app/src/main/java/com/example/myapplication/gl/: GLRenderer.kt  GLTextureUploader.kt
app/app/src/main/res/layout/: activity_main.xml
app/docs/: OPENCV_SETUP.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_processor.cpp  native_processor.h
app/src/main/java/com/example/myapplication/: NativeProcessor.kt
app/src/main/java/com/example/myapplication/camera/: CameraManager.kt
app/web/: index.html  package.json
app/web/src/: app.ts
gl/: gl_texture_uploader.cpp
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt
web/: tsconfig.json
